--- a/src/pug/blocks/nominations.pug
+++ b/src/pug/blocks/nominations.pug
@@ -1,4 +1,4 @@
-section.nominations
+section.nominations#about
 	.container
 		.nominations__text-purpose Цель проекта — создать универсальную площадку, где профессионалы из разных уголков нашей страны смогут представить свои проекты. Выбрать лучшие работы и собрать лучших дизайнеров и архитекторов, которые войдут в золотой фонд российской интерьерной индустрии.
 		.nominations__container 
