--- a/src/pug/partials/_header.pug
+++ b/src/pug/partials/_header.pug
@@ -8,9 +8,9 @@ header.header
 				.header__logo-mydecor 
 					img(src="images/logo-mydecor.png", alt="alt")
 			.header__btns.desk 
-				a.header__btn.header__btn--yellow(href="") о рейтинге
-				a.header__btn.header__btn--red(href="") учавствовать
-				a.header__btn.header__btn--blue(href="") галерея работ
+				a.header__btn.header__btn--yellow(href="#about") о рейтинге
+				a.header__btn.header__btn--red(href="#participate") учавствовать
+				a.header__btn.header__btn--blue(href="#gallery") галерея работ
 			img(src="images/header-icon-circle.png", alt="alt").header__icon-circle.desk
 			.header__burger
 				svg(width='63' height='52' viewBox='0 0 63 52' fill='none' xmlns='http://www.w3.org/2000/svg')
@@ -28,7 +28,7 @@ header.header
 					.header__logo-mydecor 
 						img(src="images/logo-mydecor.png", alt="alt")
 				.header__btns 
-					a.header__btn.header__btn--yellow(href="") о рейтинге
-					a.header__btn.header__btn--red(href="") учавствовать
-					a.header__btn.header__btn--blue(href="") галерея работ
+					a.header__btn.header__btn--yellow(href="#about") о рейтинге
+					a.header__btn.header__btn--red(href="#participate") учавствовать
+					a.header__btn.header__btn--blue(href="#gallery") галерея работ
 				img(src="images/header-icon-circle.png", alt="alt").header__icon-circle
