--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,6 +8,7 @@
 
 /*libs*/
 @import "libs/fancybox";
+@import "libs/slick";
 
 
 /* components */
@@ -22,6 +23,7 @@
 @import "blocks/nominations";
 @import "blocks/feedback";
 @import "blocks/gallary";
+@import "blocks/modal";
 
 
 
