--- a/src/styles/blocks/nominations.scss
+++ b/src/styles/blocks/nominations.scss
@@ -1,10 +1,10 @@
 .nominations {
-	margin-top: 40px;
+	padding-top: 40px;
 	@media (max-width: 1920px){
-		margin-top: 2.08vw;
+		padding-top: 2.08vw;
 	}
 	@media (max-width: 800px){
-		margin-top: 5vw;
+		padding-top: 5vw;
 	}
 	&__container {
 		padding: 0 130px 0;
