--- a/src/pug/blocks/feedback.pug
+++ b/src/pug/blocks/feedback.pug
@@ -1,6 +1,7 @@
 section.feedback#participate
 	.feedback__title 
-		span УЧАВСТВОВАТЬ
+		span
+			img.feedback__title-label(src="images/label_part_title.svg" alt="Участвовать")
 			img(src="images/feedback/square-top-left.png", alt="alt").feedback__square-top-left
 	.feedback__container 
 		img(src="images/feedback/square-top-right.png", alt="alt").feedback__square-top-right
