--- a/src/pug/partials/_header.pug
+++ b/src/pug/partials/_header.pug
@@ -9,7 +9,8 @@ header.header
 					img(src="images/logo-mydecor.png", alt="alt")
 			.header__btns.desk 
 				a.header__btn.header__btn--yellow(href="#about") о рейтинге
-				a.header__btn.header__btn--red(href="#participate") учавствовать
+				a.header__btn.header__btn--red(href="#participate")
+					img(src="images/label_part_header.svg" alt="Участвовать")
 				a.header__btn.header__btn--blue(href="#gallery") галерея работ
 			img(src="images/header-icon-circle.png", alt="alt").header__icon-circle.desk
 			.header__burger
@@ -29,6 +30,7 @@ header.header
 						img(src="images/logo-mydecor.png", alt="alt")
 				.header__btns 
 					a.header__btn.header__btn--yellow(href="#about") о рейтинге
-					a.header__btn.header__btn--red(href="#participate") учавствовать
+					a.header__btn.header__btn--red(href="#participate")
+						img(src="images/label_part_header.svg" alt="Участвовать")
 					a.header__btn.header__btn--blue(href="#gallery") галерея работ
 				img(src="images/header-icon-circle.png", alt="alt").header__icon-circle
